# payment-service

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  ruff.toml
docker/: entrypoint.sh  nginx.conf
docker/postgres/: README.md  generate-ssl-certs.sh  pg_hba.conf  postgresql.conf
docker/postgres/certs/: .gitkeep
payments/: admin.py  conftest.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_discount_tax_item_currency_order.py  0003_alter_discount_options_alter_tax_options_and_more.py  0004_orderitem.py  0005_migrate_order_items.py  0006_alter_order_items.py  0007_order_payment_currency.py
payments/static/payments/css/: cart.css  index.css  main.css  payment.css  success.css
payments/templates/payments/: cart.html  index.html  item_detail.html  item_payment_intent.html  order_detail.html  order_payment_intent.html  success.html
payments/templatetags/: payment_filters.py
payments/tests/: __init__.py  test_admin.py  test_integration.py  test_models.py  test_stripe_utils.py  test_templatetags.py  test_utils.py  test_views.py
scripts/: cloud-init.yaml  setup-vm.sh  test-deployment.sh  yc-setup.sh
stripe_payment/: asgi.py  settings.py  urls.py  wsgi.py
