[project]
name = "payment-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "stripe>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
test = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.1",
]
